--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "sshtun",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "SSH Tunneling Management",
   "main": "index.js",
   "scripts": {
-    "clean": "rm -rf node_modules ui/lib",
+    "clean": "rm -rf node_modules/ ui/lib",
     "docker:build": "docker build -t reekoheek/sshtun .",
     "docker:shell": "docker run --rm -ti reekoheek/sshtun sh",
     "docker:up": "docker run -d --name sshtun -p 3000:3000 reekoheek/sshtun",
@@ -20,18 +20,18 @@
   "dependencies": {
     "bono": "xinix-technology/node-bono#master",
     "co-body": "^4.2.0",
+    "fs-promise": "^2.0.0",
     "kcors": "^2.2.0",
     "koa-jwt": "^2.2.2",
     "koa-static": "^3.0.0",
     "node-bono-norm": "reekoheek/node-bono-norm#master",
     "node-fetch": "^1.6.3",
-    "node-norm": "xinix-technology/node-norm#master"
+    "node-norm": "xinix-technology/node-norm#master",
+    "ssh2": "^0.5.4"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babili-webpack-plugin": "0.0.8",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.0",
     "eslint-config-standard": "^6.2.1",
@@ -46,7 +46,6 @@
     "purifycss-webpack": "^0.2.2",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "uglify-js": "github:mishoo/UglifyJS2#harmony",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-dashboard": "^0.2.1",
